feat: fix media uploads, add admin panel, and enhance localization
- Increased Spring Boot multipart file size limits to 200MB in application.yml.
- Implemented role-based security in backend (UserDetailsServiceImpl and SecurityConfig).
- Created AdminController with endpoints for user and group management.
- Developed AdminPage UI for managing users and groups.
- Added language switcher to ProfilePage.
- Updated translations for RU, EN, and KK locales.
- Added null safety for user roles in DTO mapping.
- Cleaned up AI-generated comments and temporary logs.

Co-authored-by: Jojosent <102660178+Jojosent@users.noreply.github.com>